# poezio

./: .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG  COPYING  Cargo.toml  Dockerfile  MANIFEST.in  Makefile  README  README.rst  launch.sh  requirements-plugins.txt  requirements.txt  setup.py  update.sh
.github/: pull_request_template.md
data/: default_config.cfg  doap.xml  io.poez.Poezio.appdata.xml  io.poez.Poezio.desktop  io.poez.Poezio.json  poezio.1  poezio_gpg_export.1  poezio_logs.1  scripts-manpages.xml
doc/: Makefile  poezio.txt
locale/: poezio.pot
plugins/: .translate.py  admin.py  ai.py  alias.py  amsg.py  autocorrect.py  b64.py  bob.py  capslock.py  change_title.py  close_all.py  code.py  contact.py  csi.py  cyber.py  day_change.py  dice.py  disco.py  display_corrections.py  double.py  embed.py  emoji_ascii.py  exec.py  figlet.py  iq_show.py  irc.py  lastlog.py  link.py  mam.py  marquee.py  mirror.py  mpd_client.py  omemo_plugin.py  otr.py  pacokick.py  ping.py  pipe_cmd.py  pointpoint.py  qr.py  quote.py  (+30 more)
poezio/: __init__.py  __main__.py  args.py  asyncio.py  asyncio_fix.py  bookmarks.py  colors.py  common.py  config.py  connection.py  contact.py  daemon.py  decorators.py  events.py  fifo.py  fixes.py  hsluv.py  keyboard.py  libpoezio.pyi  log_loader.py  logger.py  mam.py  multiuserchat.py  pep.py  plugin.py  plugin_e2ee.py  plugin_manager.py  poezio.py  poezio_shlex.py  poezio_shlex.pyi  poopt.py  poopt.pyi  pooptmodule.c  roster.py  roster_sorting.py  (+11 more)
tools/sticker-picker/: Cargo.toml
tools/sticker-picker/src/: main.rs  sticker.rs
(+292 files in other folders)
