[package]
name = "poezio"
version = "0.1.0"
authors = [
  "Emmanuel Gil Peyrot <linkmauve@linkmauve.fr>",
  "Maxime “pep” Buquet <pep@bouah.net>",
]

[dependencies]
pyo3 = { version = "0.16", features = ["extension-module"] }
nom = "7.1"
chrono = "0.4"
ncurses = "5"
lazy_static = "1"
enum-set = "0.0"

[lib]
crate-type = ["cdylib"]
