[package]
name = "poezio-sticker-picker"
version = "0.1.0"
edition = "2021"
authors = ["Emmanuel Gil Peyrot <linkmauve@linkmauve.fr>"]
license = "GPL-3.0-or-later"
description = "Helper tool for selecting a sticker inside a pack"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { package = "gtk4", version = "0.4", features = ["v4_6"] }
gdk = { package = "gdk4", version = "0.4", features = ["v4_6"] }
glib = "0.15"
gio = "0.15"
once_cell = "1.9.0"
